--- a/Diabetes Classification/templates/result.html
+++ b/Diabetes Classification/templates/result.html
@@ -1,82 +1,102 @@
 <!DOCTYPE html>
-
 <html lang="en" dir="ltr">
-	<head>
-		<meta charset="utf-8">
-		<title>Diabetes Predictor</title>
-	    <style>
-            @import url(https://fonts.googleapis.com/css?family=Open+Sans);
-            .btn {
-                    display: inline-block;
-                    *display: inline;
-                    *zoom: 1;
-                    padding: 4px 10px 4px;
-                    margin-bottom: 0;
-                    font-size: 13px;
-                    line-height: 18px;
-                    color: #333333;
-                    text-align: center;
-                    text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-                    vertical-align: middle;
-                    background-color: #f5f5f5;
-                    background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
-                    background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
-                    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
-                    background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-                    background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
-                    background-image: linear-gradient(top, #ffffff, #e6e6e6);
-                    background-repeat: repeat-x;
-                    filter: progid:dximagetransform.microsoft.gradient(startColorstr=#ffffff, endColorstr=#e6e6e6, GradientType=0);
-                    border-color: #e6e6e6 #e6e6e6 #e6e6e6;
-                    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1)
-                    rgba(0, 0, 0, 0.25); border: 1px solid #e6e6e6;
-                    -webkit-border-radius: 4px;
-                    -moz-border-radius: 4px;
-                    border-radius: 4px;
-                    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-                    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-                    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-                    cursor: pointer; *margin-left: .3em;
-                }
-                .btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled] { background-color: #e6e6e6; }
-                .btn-large { padding: 9px 14px; font-size: 15px; line-height: normal; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; }
-                .btn:hover { color: #333333; text-decoration: none; background-color: #e6e6e6; background-position: 0 -15px; -webkit-transition: background-position 0.1s linear; -moz-transition: background-position 0.1s linear; -ms-transition: background-position 0.1s linear; -o-transition: background-position 0.1s linear; transition: background-position 0.1s linear; }
-                .btn-primary, .btn-primary:hover { text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25); color: #ffffff; }
-                .btn-primary.active { color: rgba(255, 255, 255, 0.75); }
-                .btn-primary { background-color: #4a77d4; background-image: -moz-linear-gradient(top, #6eb6de, #4a77d4); background-image: -ms-linear-gradient(top, #6eb6de, #4a77d4); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#6eb6de), to(#4a77d4)); background-image: -webkit-linear-gradient(top, #6eb6de, #4a77d4); background-image: -o-linear-gradient(top, #6eb6de, #4a77d4); background-image: linear-gradient(top, #6eb6de, #4a77d4); background-repeat: repeat-x; filter: progid:dximagetransform.microsoft.gradient(startColorstr=#6eb6de, endColorstr=#4a77d4, GradientType=0);  border: 1px solid #3762bc; text-shadow: 1px 1px 1px rgba(0,0,0,0.4); box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.5); }
-                .btn-primary:hover, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { filter: none; background-color: #4a77d4; }
-                .btn-block { width: 100%; display:block; }
-body { 
-	width: 100%;
-	height:auto;
-	font-family: 'Open Sans', sans-serif;
-	color: #fff;
-	font-size: 18px;
-	text-align:center;
-	letter-spacing:1.2px;
-    background-image: url("../static/wallpaper.jpg");
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Diabetes Predictor</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap');
 
-}
+        body {
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100vh;
+            font-family: 'Open Sans', sans-serif;
+            color: #fff;
+            font-size: 18px;
+            text-align: center;
+            letter-spacing: 1.2px;
+            background-image: url("../static/wallpaper.jpg");
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
 
-.results{
- margin-top:150px;
-}
-</style>
-    </head>
-    <body>
+        .results {
+            margin-top: 20%;
+            padding: 20px;
+            background-color: rgba(0, 0, 0, 0.6);
+            border-radius: 10px;
+            box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.4);
+            display: inline-block;
+        }
 
-		<!-- Result -->
-		<div class="results">
-			{% if prediction==1 %}
-				<h1>Prediction: <span class='danger'>Opps! You have DIABETES.</span></h1>
-				<img class="gif" src="{{ url_for('static', filename='diabetes.webp') }}" alt="Diabetes Image">
-			{% elif prediction==0 %}
-				<h1>Prediction: <span class='safe'>Hurrah !!! You DON'T have diabetes.</span></h1>
-				<img class="gif1" src="{{ url_for('static', filename='no-diabetes.webp') }}" alt="Not Diabetes Image">
-			{% endif %}
-		</div>
+        h1 {
+            font-size: 24px;
+            margin-bottom: 20px;
+        }
 
-		
+        h1 span {
+            font-weight: 600;
+        }
 
-	</body>
+        .danger {
+            color: #ff4d4d;
+        }
+
+        .safe {
+            color: #4caf50;
+        }
+
+        img {
+            width: 300px;
+            height: auto;
+            margin-top: 15px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        .btn {
+            display: inline-block;
+            padding: 10px 20px;
+            margin-top: 20px;
+            font-size: 16px;
+            font-weight: bold;
+            color: #ffffff;
+            background-color: #4a77d4;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+            transition: background-color 0.3s ease, transform 0.2s ease;
+        }
+
+        .btn:hover {
+            background-color: #3762bc;
+            transform: translateY(-3px);
+        }
+
+        .btn:active {
+            background-color: #6eb6de;
+            transform: translateY(1px);
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Result -->
+    <div class="results">
+        {% if prediction == 1 %}
+            <h1>Prediction: <span class="danger">Oops! You have DIABETES.</span></h1>
+            <img src="{{ url_for('static', filename='diabetes.webp') }}" alt="Diabetes Image">
+        {% elif prediction == 0 %}
+            <h1>Prediction: <span class="safe">Hurrah!!! You DON'T have diabetes.</span></h1>
+            <img src="{{ url_for('static', filename='no-diabetes.webp') }}" alt="No Diabetes Image">
+        {% endif %}
+        <a href="/" class="btn">Try Again</a>
+    </div>
+
+</body>
 </html>
